--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 4.1.0)
 
 project(component-engine
     VERSION 0.1.0
@@ -10,6 +10,8 @@ project(component-engine
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+find_package (Python COMPONENTS Interpreter Development.Module Development.Embed REQUIRED)
 
 add_subdirectory(core)
 add_subdirectory(examples)
