--- a/examples/simple-example/CMakeLists.txt
+++ b/examples/simple-example/CMakeLists.txt
@@ -5,5 +5,8 @@ file(GLOB_RECURSE SOURCES ${SOURCES_DIR}/*.cpp)
 
 add_executable(simple-example ${SOURCES})
 
-target_include_directories(simple-example PUBLIC ${HEADERS_DIR})
+target_link_libraries(core PRIVATE ${Python_LIBRARIES})
 target_link_libraries(simple-example PUBLIC core)
+
+target_include_directories(simple-example PUBLIC ${HEADERS_DIR})
+target_include_directories(simple-example PRIVATE ${Python_INCLUDE_DIRS})
